--- a/redux-intro/package.json
+++ b/redux-intro/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.16.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
